Fix model container z-index

--- a/Assets/modal-manager/sass/modal.sass
+++ b/Assets/modal-manager/sass/modal.sass
@@ -293,7 +293,7 @@ body.modal-open
 // put modal container on the top of all container
 body > .modal-container
   position: fixed
-  z-index: 99999
+  z-index: 9999
 
 
 .modal-body .action-result-container
